[gd_scene load_steps=29 format=3 uid="uid://bpslrq66ysgyk"]

[ext_resource type="Script" path="res://battle/script_battle_menu.gd" id="2_4suhd"]
[ext_resource type="Shader" path="res://battle/shader_battle_menu_001.gdshader" id="3_303d0"]
[ext_resource type="Shader" path="res://battle/shade_circle_transition.gdshader" id="5_ggrxs"]
[ext_resource type="Texture2D" uid="uid://ctla0pk1phugl" path="res://battle/tex_bg_1.png" id="5_ipyf3"]
[ext_resource type="LabelSettings" uid="uid://bdxtw162r24p7" path="res://base_font.tres" id="6_m6oif"]
[ext_resource type="Texture2D" uid="uid://mibs4jii822c" path="res://player_related/tex_text_box.png" id="9_fmql0"]
[ext_resource type="AudioStream" uid="uid://b40vkk5xfr4ni" path="res://music/mus_battle_test.ogg" id="10_ow1mv"]
[ext_resource type="AudioStream" uid="uid://b7jvyjmvsljmw" path="res://music/mus_version final.wav" id="11_861nj"]
[ext_resource type="AudioStream" uid="uid://bumvvm8fd01v6" path="res://sound_effect/hit.wav" id="12_vkokc"]
[ext_resource type="AudioStream" uid="uid://qtdy3rir27ih" path="res://sound_effect/hurt.wav" id="13_134ph"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_huvy6"]
shader = ExtResource("3_303d0")
shader_parameter/mouse_position = Vector2(0.5, 0.5)
shader_parameter/wave_color = Color(0.027451, 0.0705882, 0.0509804, 1)
shader_parameter/wave_transparency = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ony88"]
shader = ExtResource("5_ggrxs")
shader_parameter/circle_size = 0.0

[sub_resource type="Animation" id="Animation_83884"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("shader_circle:material:shader_parameter/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("background:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("background/action_border:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-128, -128)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("background/historic_border:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(176, 56)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("background/historic_border:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-48, -128)]
}

[sub_resource type="Animation" id="Animation_3hdgm"]
resource_name = "battle end"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("shader_circle:material:shader_parameter/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("background:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_41hr2"]
resource_name = "battle start"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("shader_circle:material:shader_parameter/circle_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("background:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_coe3o"]
resource_name = "menu_show"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background/historic_border:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(176, 56), Vector2(256, 56)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("background/action_border:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-128, -128), Vector2(-208, -128)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("background/historic_border:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-48, -128), Vector2(-128, -128)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e7p6k"]
_data = {
"RESET": SubResource("Animation_83884"),
"battle end": SubResource("Animation_3hdgm"),
"battle start": SubResource("Animation_41hr2"),
"menu_show": SubResource("Animation_coe3o")
}

[sub_resource type="Animation" id="Animation_x82dr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D/AudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D/AudioStreamPlayer:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_ow1mv")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D/AudioStreamPlayer:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D/Hit:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer2D/Hurt:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1meeg"]
resource_name = "ennemi_atk"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D/Hit:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_i75en"]
resource_name = "ennemi_hit"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D/Hurt:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_wi22h"]
resource_name = "player_atk"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D/Hit:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ynsyi"]
resource_name = "player_down"
length = 4.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D/AudioStreamPlayer:pitch_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.1]
}

[sub_resource type="Animation" id="Animation_u8332"]
resource_name = "player_flee_lose"
length = 0.8
step = 0.05

[sub_resource type="Animation" id="Animation_e62rd"]
resource_name = "player_flee_win"
length = 0.8
step = 0.05

[sub_resource type="Animation" id="Animation_axl21"]
resource_name = "player_hit"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D/Hurt:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_ofsv2"]
resource_name = "player_think"
length = 3.0
step = 0.1

[sub_resource type="Animation" id="Animation_ch1yl"]
resource_name = "player_win"
length = 4.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D/AudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D/AudioStreamPlayer:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_861nj")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f6lb5"]
_data = {
"RESET": SubResource("Animation_x82dr"),
"ennemi_atk": SubResource("Animation_1meeg"),
"ennemi_hit": SubResource("Animation_i75en"),
"player_atk": SubResource("Animation_wi22h"),
"player_down": SubResource("Animation_ynsyi"),
"player_flee_lose": SubResource("Animation_u8332"),
"player_flee_win": SubResource("Animation_e62rd"),
"player_hit": SubResource("Animation_axl21"),
"player_think": SubResource("Animation_ofsv2"),
"player_win": SubResource("Animation_ch1yl")
}

[node name="base_battle" type="Node2D"]
position = Vector2(128, 128)
script = ExtResource("2_4suhd")
music_battle = ExtResource("10_ow1mv")

[node name="background" type="Sprite2D" parent="."]

[node name="earthbound_bg" type="TextureRect" parent="background"]
visible = false
material = SubResource("ShaderMaterial_huvy6")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
offset_right = -128.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ipyf3")

[node name="action_border" type="NinePatchRect" parent="background"]
offset_left = -128.0
offset_top = -128.0
offset_right = -48.0
offset_bottom = -72.0
texture = ExtResource("9_fmql0")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="action_label" type="Label" parent="background/action_border"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 40.0
text = "attaque<
defense
item
flee"
label_settings = ExtResource("6_m6oif")

[node name="health_border" type="NinePatchRect" parent="background"]
offset_left = -128.0
offset_top = 96.0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("9_fmql0")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="health_label" type="Label" parent="background/health_border"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 40.0
text = "bob : pv 100/100
cartacro : pv 100/100"
label_settings = ExtResource("6_m6oif")

[node name="historic_border" type="NinePatchRect" parent="background"]
clip_contents = true
offset_left = -48.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = -72.0
texture = ExtResource("9_fmql0")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="historic_label" type="Label" parent="background/historic_border"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 152.0
offset_bottom = 48.0
text = "ligne 1
ligne 2
ligne 3
ligne 4
ligne 5"
label_settings = ExtResource("6_m6oif")

[node name="shader_circle" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_ony88")
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
color = Color(0, 0, 0, 1)

[node name="animation_interface" type="AnimationPlayer" parent="shader_circle"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_e7p6k")
}

[node name="animation_battle" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f6lb5")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioStreamPlayer2D"]
stream = ExtResource("10_ow1mv")
autoplay = true

[node name="Hit" type="AudioStreamPlayer" parent="AudioStreamPlayer2D"]
stream = ExtResource("12_vkokc")

[node name="Hurt" type="AudioStreamPlayer" parent="AudioStreamPlayer2D"]
stream = ExtResource("13_134ph")
